# Shackle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Shackle.cpp  build.gradle
Data/: 1-0.txt  1-1.txt
Shackle/: 0-0.txt  1-0.txt  1-1.txt  2-0.txt  Shackle.cpp
assets/tile_map/: 0-1.tmx  CliffTileset.tsx  DirtTileset.tsx
core/src/cn/qc9ff/shackleje/: ShackleApplication.java
core/src/cn/qc9ff/shackleje/level/: Level.java
core/src/cn/qc9ff/shackleje/level/map/: Map.java  MapManager.java
core/src/cn/qc9ff/shackleje/libgdx/actor/: PlayerActor.java  WallActor.java
core/src/cn/qc9ff/shackleje/libgdx/input/: GameInputHandler.java  GameInputListener.java  InputHandler.java
core/src/cn/qc9ff/shackleje/libgdx/loader/: MapLoader.java
core/src/cn/qc9ff/shackleje/libgdx/screen/: GameScreen.java  MenuScreen.java  StartScreen.java
core/src/cn/qc9ff/shackleje/libgdx/util/: AssetsPath.java  CollisionUtils.java  ScreenType.java
core/src/cn/qc9ff/shackleje/util/: BlockType.java  Location.java
desktop/: build.gradle
desktop/src/cn/qc9ff/shackleje/: DesktopLauncher.java
resources/: 0-0.txt  2-0.txt  Shackle.cpp
src/: ShackleMain.cpp
src/level/: Level.cpp  Level.h
